# rust-htmx

./: .gitignore  Cargo.toml  LICENSE  README.md  tailwind.config.js
src/: database.rs  demo.rs  item.rs  main.rs
template/: base.html
templates/: base.html  items.html
templates/modal/: addItem.html  error.html
tests/: quick_dev.rs
