[package]
name = "rust-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tera = { version = "1", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
futures = "0.3.30"
[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"