[package]
name = "qvd-rust-htmx-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
shuttle-axum = "0.38.0"
shuttle-runtime = "0.38.0"
tokio = "1.28.2"
tracing = "0.1.40"
tera = { version = "1", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] } 
sqlite = "0.33.0"